set02/problem05_compile_errors.txt
Compilation started at 11/15/2023, 8:30:35 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'main':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:21:5: error: 'gcd_sum' undeclared (first use in this function)
     gcd_sum=find_gcd(a,b);
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:21:5: note: each undeclared identifier is reported only once for each function it appears in
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'find_gcd':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:36:5: error: 'for' loop initial declarations are only allowed in C99 mode
     for (int i = 1; i <= min; ++i) {
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:36:5: note: use option -std=c99 or -std=gnu99 to compile your code
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:36:26: error: 'min' undeclared (first use in this function)
     for (int i = 1; i <= min; ++i) {
                          ^
Compilation finished at 11/15/2023, 8:30:36 PM
Compilation started at 11/15/2023, 8:32:00 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'main':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:21:5: error: 'gcd_sum' undeclared (first use in this function)
     gcd_sum=find_gcd(a,b);
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:21:5: note: each undeclared identifier is reported only once for each function it appears in
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'find_gcd':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:37:5: error: expected ',' or ';' before 'for'
     for (int i = 1; i <= min; ++i) {
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:37:21: error: 'i' undeclared (first use in this function)
     for (int i = 1; i <= min; ++i) {
                     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:37:34: error: expected ';' before ')' token
     for (int i = 1; i <= min; ++i) {
                                  ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:37:34: error: expected statement before ')' token
Compilation finished at 11/15/2023, 8:32:00 PM
Compilation started at 11/15/2023, 8:48:37 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'find_gcd':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: error: 'for' loop initial declarations are only allowed in C99 mode
     for (int i = 1; i <= min; ++i) {
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: note: use option -std=c99 or -std=gnu99 to compile your code
Compilation finished at 11/15/2023, 8:48:37 PM
Compilation started at 11/15/2023, 8:48:58 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'find_gcd':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: error: 'for' loop initial declarations are only allowed in C99 mode
     for (int i = 1; i <= min; ++i) {
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: note: use option -std=c99 or -std=gnu99 to compile your code
Compilation finished at 11/15/2023, 8:48:58 PM
Compilation started at 11/15/2023, 8:54:04 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c: In function 'find_gcd':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: error: 'for' loop initial declarations are only allowed in C99 mode
     for (int i = 1; i <= min; ++i) {
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem05.c:42:5: note: use option -std=c99 or -std=gnu99 to compile your code
Compilation finished at 11/15/2023, 8:54:06 PM
